deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manufakture-web
  namespace: ${MANUFAKTURE_NAMESPACE}
  labels:
    app.kubernetes.io/name: manufakture-web
spec:
  selector:
    app.kubernetes.io/name: manufakture-web
  ports:
    - name: http
      port: 80
      targetPort: http
